--- a/sass/main.css
+++ b/sass/main.css
@@ -502,13 +502,26 @@ input[type=checkbox]#like4:checked ~ .like-checked4 {
   padding: 15px 12px;
   background: #fff;
   border-radius: 15px;
-  animation: show 750ms cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  transform: scale(0);
+  transform-origin: 0% 50%;
   overflow: hidden;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
   display: flex;
   flex-direction: row;
   align-items: inherit;
+  visibility: hidden;
+  animation: show 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
+}
+.menu-section__card--1 {
+  animation-delay: 0.25s;
+}
+.menu-section__card--2 {
+  animation-delay: 0.5s;
+}
+.menu-section__card--3 {
+  animation-delay: 0.75s;
+}
+.menu-section__card--4 {
+  animation-delay: 1s;
 }
 .menu-section__card .choice {
   display: flex;
@@ -568,10 +581,11 @@ input[type=checkbox]#like4:checked ~ .like-checked4 {
 
 @keyframes show {
   0% {
-    transform: scale(0);
+    transform: scaleX(0);
   }
   100% {
-    transform: scale(1);
+    transform: scaleX(1);
+    visibility: visible;
   }
 }
 /******** MEDIA QUERIES *******/
