--- a/sass/main.scss
+++ b/sass/main.scss
@@ -512,6 +512,9 @@ input[type="checkbox"]#like4:checked ~ .like-checked4 {
         }
     }  
 }
+$anim-dur: 1s;
+$anim-delay: $anim-dur /4;
+
 .menu-section {
     width: 100%;
     display: flex;
@@ -529,13 +532,19 @@ input[type="checkbox"]#like4:checked ~ .like-checked4 {
         padding: 15px 12px;
         background: $colors-bg-operation;
         border-radius: 15px;
-        animation: show 750ms cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-        transform: scale(0);
+        transform-origin: 0% 50%;
         overflow: hidden;
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
         display: flex;
         flex-direction: row;
         align-items: inherit;
+        visibility:hidden;
+        animation: show 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
+        @for $i from 1 through 4 {
+            &--#{$i} {
+                animation-delay: $anim-delay * $i;
+            }
+        }
         & .choice {
             display: flex;
             flex-direction: column;
@@ -597,10 +606,11 @@ input[type="checkbox"]#like4:checked ~ .like-checked4 {
 }
 @keyframes show {
     0% {
-        transform: scale(0);
+        transform: scaleX(0);
     }
     100%{
-        transform: scale(1);
+        transform: scaleX(1);
+        visibility: visible;
     }
 }
 
