--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,3 +1,5 @@
+/** VARIABLES **/
+/** MAPS **/
 .main-container {
   padding: 0;
   margin: 0;
@@ -14,26 +16,17 @@
   width: 100%;
   left: 0;
   top: 0;
-  z-index: 5000;
+  z-index: 500;
   display: flex;
   align-items: center;
   justify-content: center;
   background: hsla(300, 14%, 95%, 0.83);
-  animation-duration: 200ms;
-  animation-delay: 1500ms;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: 1;
-  animation-fill-mode: forwards;
-  animation-name: infinite;
+  animation: 1500ms 800ms normal 1 forwards infinite;
 }
 
 @keyframes infinite {
   0% {
     opacity: 1;
-    visibility: visible;
-  }
-  99% {
-    opacity: 0;
     visibility: visible;
   }
   100% {
@@ -60,22 +53,22 @@
 
 .loader div:nth-child(1) {
   left: 8px;
-  animation: loader1 600ms infinite;
+  animation: loader1 800ms infinite;
 }
 
 .loader div:nth-child(2) {
   left: 8px;
-  animation: loader2 600ms infinite;
+  animation: loader2 800ms infinite;
 }
 
 .loader div:nth-child(3) {
   left: 32px;
-  animation: loader2 600ms infinite;
+  animation: loader2 800ms infinite;
 }
 
 .loader div:nth-child(4) {
   left: 56px;
-  animation: loader3 600ms infinite;
+  animation: loader3 800ms infinite;
 }
 
 @keyframes loader1 {
@@ -105,7 +98,7 @@
 /** MIXIN **/
 /****** CONTENU PAGE ****/
 body {
-  background: #fff;
+  background: #F6F6F6;
   font-family: "Roboto", sans-serif;
   color: #000000;
   margin: 0;
@@ -117,10 +110,18 @@ body {
   justify-content: center;
   align-items: center;
   z-index: 1;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.15);
 }
 .header__logo {
-  padding: 14px 0 5px 0;
+  padding: 10px 0;
+  width: 162px;
+  height: 44px;
+}
+@media screen and (min-width: 1024px) {
+  .header__logo {
+    width: 200px;
+    height: 34px;
+  }
 }
 .header__back {
   color: #000000;
@@ -135,7 +136,7 @@ button {
   margin: 20px 0;
   color: #fff;
   width: 218px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.25);
   border-radius: 25px;
   border: 0;
   background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
@@ -146,7 +147,7 @@ button {
 }
 button:hover {
   background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
-  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
+  box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.35);
 }
 
 /**** FOOTER ****/
@@ -157,16 +158,29 @@ button:hover {
   color: #fff;
   box-sizing: border-box;
   display: flex;
+  flex-direction: column;
+  padding: 22px 25px;
 }
 .footer__title {
   font-family: Shrikhand, "sans-serif";
   margin: 0;
   font-size: 18px;
+  font-weight: 400;
+  padding-bottom: 1em;
 }
 .footer__content {
   list-style: none;
   display: flex;
+  flex-direction: column;
   padding: 0;
+  margin: 0;
+}
+@media screen and (min-width: 1024px) {
+  .footer__content {
+    flex-direction: row;
+    gap: 12px;
+    margin: 1em 0;
+  }
 }
 .footer__content a {
   text-decoration: none;
@@ -183,7 +197,7 @@ button:hover {
   padding-top: 7px;
 }
 .footer__content li .fa-utensils {
-  padding-right: 6px;
+  padding-right: 5px;
   font-size: 14px;
 }
 .footer__content li .fa-handshake-angle {
@@ -197,7 +211,7 @@ button:hover {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 15px 0;
+  padding: 16px 0;
   gap: 17px;
   color: #353535;
   font-size: 16px;
@@ -216,10 +230,21 @@ button:hover {
   flex-direction: column;
   align-items: center;
   text-align: center;
+  margin: 30px 25px;
 }
 .presentation__heading {
-  padding: 0 25px;
   color: #000000;
+  font-size: 24px;
+  font-weight: 700;
+}
+@media screen and (min-width: 1024px) {
+  .presentation__heading {
+    padding: 30px 0;
+    margin: 0;
+    font-size: 24px;
+    font-weight: 700;
+    width: 100%;
+  }
 }
 .presentation__detail {
   padding: 10px 0;
@@ -228,65 +253,130 @@ button:hover {
   color: #353535;
   margin: 0;
 }
+@media screen and (min-width: 1024px) {
+  .presentation__detail {
+    padding-bottom: 30px;
+  }
+}
 
 /*** FONCTIONNEMENT ***/
 .operation {
   background: #fff;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  gap: 26px;
+  gap: 25px;
+  width: 100%;
+  align-items: stretch;
+  box-sizing: border-box;
+  padding: 48px 20px 68px;
+}
+@media screen and (max-width: 1024px) and (min-width: 767px) {
+  .operation {
+    padding: 30px 100px;
+  }
+}
+@media screen and (max-width: 1440px) and (min-width: ) {
+  .operation {
+    padding: 30px 180px;
+  }
+}
+@media screen and (min-width: 767px) {
+  .operation {
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 30px 100px 50px;
+  }
 }
 .operation__title {
   margin: 0;
   font-size: 24px;
   font-weight: 700;
   width: 100%;
+  width: 100%;
+  margin: 0 0 2px;
 }
-
-.step {
+@media screen and (min-width: 767px) {
+  .operation__title {
+    padding-top: 20px;
+  }
+}
+.operation__step {
   display: flex;
   flex-direction: row;
   width: 100%;
   align-items: center;
+  height: 100%;
+  flex-wrap: nowrap;
+  justify-content: space-between;
 }
-.step__detail {
+@media screen and (min-width: 767px) {
+  .operation__step {
+    width: 30%;
+    flex: 1 1 20%;
+  }
+}
+
+.step-detail {
   display: flex;
   flex-direction: row;
   align-items: center;
   background: #F6F6F6;
-  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.15);
   border-radius: 20px;
   gap: 20px;
-  margin-left: 10px;
+  flex-grow: 1;
+  flex-shrink: 1;
+  margin: 0 0 0 14px;
   list-style: none;
-  padding: 10px 40px;
+  padding: 10px 20px 10px 30px;
   position: relative;
   width: 100%;
+  box-sizing: border-box;
 }
-.step__detail .fa-store {
+.step-detail .fa-store {
   color: #9356DC;
 }
-.step__order {
+
+.step-order {
   background: #9356DC;
-  padding: 5px 10px;
+  padding: 3px 8px;
   border-radius: 15px;
   color: #fff;
   position: absolute;
+  font-size: 14px;
+  font-weight: 500;
 }
 
 /*** RESTAURANTS ***/
 .restaurants {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   padding: 54px 18px 66px 17px;
   gap: 25px;
   box-sizing: border-box;
   width: 100%;
   justify-content: space-between;
 }
+@media screen and (max-width: 1024px) and (min-width: 767px) {
+  .restaurants {
+    padding: 30px 100px;
+  }
+}
+@media screen and (max-width: 1440px) and (min-width: ) {
+  .restaurants {
+    padding: 30px 180px;
+  }
+}
+@media screen and (min-width: 767px) {
+  .restaurants {
+    flex-direction: row;
+  }
+}
 .restaurants__title {
   padding-left: 3px;
-  padding-bottom: 3px;
+  width: 100%;
   margin: 0;
   font-size: 24px;
   font-weight: 700;
@@ -294,35 +384,47 @@ button:hover {
 }
 .restaurants__card {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   box-sizing: border-box;
+  gap: 18px;
+  width: 100%;
 }
-.restaurants__card a {
-  text-decoration: none;
-  color: #000000;
-  height: 251px;
-  box-sizing: border-box;
+@media screen and (min-width: 767px) {
+  .restaurants__card {
+    flex-direction: row;
+    row-gap: 50px;
+    column-gap: 100px;
+  }
 }
 
 .card {
   position: relative;
   display: grid;
-  grid-template-rows: 180px;
+  grid-template-rows: 176px;
   grid-template-columns: 1fr auto;
   grid-template-areas: "image-card image-card" "txt-card like";
   justify-content: space-between;
   align-items: center;
-  background-color: transparent;
   height: 251px;
   box-sizing: border-box;
+  width: 100%;
+  height: 100%;
   background-color: #fff;
   border-radius: 15px;
-  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.1);
+  flex: 1 1 40%;
+}
+.card a {
+  text-decoration: none;
+  color: #000000;
+  height: 251px;
+  box-sizing: border-box;
 }
 .card__image {
   grid-area: image-card;
   width: 100%;
-  height: 100%;
+  height: 176px;
   box-sizing: border-box;
 }
 .card__image img {
@@ -336,20 +438,29 @@ button:hover {
   position: absolute;
   top: 13px;
   right: 12px;
-  padding: 10px;
+  padding: 6px 12px;
   background-color: #99E2D0;
   color: #008766;
   border-radius: 2px;
   font-size: 14px;
   font-weight: 500;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.15);
+}
+@media screen and (min-width: 1440px) {
+  .card__image .box-new {
+    right: 17px;
+  }
 }
 .card__content {
   grid-area: txt-card;
-  grid-column-start: 1;
-  grid-column-end: 3;
-  height: 71px;
-  padding: 16px 25px 12px 13px;
+  height: 100%;
+  padding: 16px 0 12px 13px;
   box-sizing: border-box;
+}
+@media screen and (min-width: 1440px) {
+  .card__content {
+    padding-left: 18px;
+  }
 }
 .card__content h3 {
   margin: 0;
@@ -364,7 +475,7 @@ button:hover {
 .card__like {
   grid-area: like;
   box-sizing: border-box;
-  padding: 22px;
+  padding-right: 25px;
 }
 
 /**FAVORI**/
@@ -373,11 +484,11 @@ label {
 }
 
 .like-checked1, .like-checked2, .like-checked3, .like-checked4 {
-  font-size: 22px;
+  font-size: 24px;
 }
 
 .like-unchecked1, .like-unchecked2, .like-unchecked3, .like-unchecked4 {
-  font-size: 22px;
+  font-size: 24px;
   background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
   background-clip: text;
   -webkit-background-clip: text;
@@ -555,9 +666,9 @@ input[type=checkbox]#like4:checked ~ .like-checked4 {
 .menu-section__card .check {
   background-color: #99E2D0;
   color: #fff;
-  font-size: 18px;
-  border-top-right-radius: 1rem;
-  border-bottom-right-radius: 1rem;
+  font-size: 24px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
   width: 59px;
   display: flex;
   align-items: center;
@@ -567,14 +678,14 @@ input[type=checkbox]#like4:checked ~ .like-checked4 {
 }
 .menu-section__card .check i {
   font-size: 20px;
-  transform: rotate(0);
+  transform: rotate(-360deg);
   transition: transform 300ms linear;
 }
 .menu-section__card:hover > .check {
   margin-right: -15px;
 }
 .menu-section__card:hover > .check > i {
-  transform: rotate(-1800deg);
+  transform: rotate(0);
 }
 
 @keyframes show {
@@ -588,284 +699,38 @@ input[type=checkbox]#like4:checked ~ .like-checked4 {
 }
 /******** MEDIA QUERIES *******/
 /**** VERSION MOBILE ****/
-@media only screen and (max-width: 768px) {
-  .header__logo {
-    width: 162px;
-    height: 44px;
-  }
-  /**** LOCAL ****/
-  .place {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 15px 0;
-    gap: 17px;
-    color: #353535;
-    font-size: 16px;
-    font-weight: 500;
-    background: #EAEAEA;
-  }
-  .place__city {
-    text-decoration: none;
-    color: #353535;
-    padding-right: 10px;
-  }
-  /**** PRESENTATION ****/
-  .presentation {
-    padding: 39px 20px 30px 20px;
-  }
-  .presentation__heading {
-    margin: 0;
-    font-size: 24px;
-    font-weight: 700;
-    width: 100%;
-  }
-  /**** FONCTIONNEMENT ****/
-  .operation {
-    padding: 48px 20px;
-    flex-direction: column;
-    flex-wrap: wrap;
-  }
-  /**** RESTAURANTS ****/
-  .restaurants {
-    flex-direction: column;
-    padding: 54px 18px 66px 17px;
-  }
-  .restaurants__title {
-    padding-left: 3px;
-    padding-bottom: 3px;
-    margin: 0;
-    font-size: 24px;
-    font-weight: 700;
-    width: 100%;
-  }
-  .restaurants__card {
-    flex-direction: column;
-    gap: 26px;
-  }
-  .restaurants__card a {
-    width: 100%;
-  }
-  .card {
-    position: relative;
-    display: grid;
-    grid-template-rows: 180px;
-    grid-template-columns: 1fr auto;
-    grid-template-areas: "image-card image-card" "txt-card like";
-    justify-content: space-between;
-    align-items: center;
-    background-color: transparent;
-    height: 251px;
-    box-sizing: border-box;
-    background-color: #fff;
-    border-radius: 15px;
-    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
-  }
-  .card__image {
-    grid-area: image-card;
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
-  }
-  .card__image img {
-    object-fit: cover;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    height: 100%;
-    width: 100%;
-  }
-  .card__image .box-new {
-    position: absolute;
-    top: 13px;
-    right: 12px;
-    padding: 10px;
-    background-color: #99E2D0;
-    color: #008766;
-    border-radius: 2px;
-    font-size: 14px;
-    font-weight: 500;
-  }
-  .card__content {
-    grid-area: txt-card;
-    grid-column-start: 1;
-    grid-column-end: 3;
-    height: 71px;
-    padding: 16px 25px 12px 13px;
-    box-sizing: border-box;
-  }
-  .card__content h3 {
-    margin: 0;
-    font-size: 18px;
-    font-weight: 700;
-  }
-  .card__content p {
-    margin: 0;
-    font-size: 17px;
-    font-weight: 300;
-  }
-  .card__like {
-    grid-area: like;
-    box-sizing: border-box;
-    padding: 22px;
-  }
-  /**** FOOTER ****/
-  .footer {
-    padding: 22px 25px;
-    flex-direction: column;
-    background-color: #353535;
-    font-size: 16px;
-    font-weight: 400;
-    color: #fff;
-  }
-  .footer__title {
-    font-family: Shrikhand, "sans-serif";
-    margin: 0;
-    font-size: 18px;
-  }
-  .footer__content {
-    margin: 16px 0;
-    flex-direction: column;
-  }
-  .footer__content a {
-    text-decoration: none;
-    color: #fff;
-  }
-  .footer__content li {
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto;
-    gap: 7px;
-    align-items: center;
-    justify-items: start;
-    justify-content: start;
-    padding-top: 7px;
-  }
-  .footer__content li .fa-utensils {
-    padding-right: 6px;
-    font-size: 14px;
-  }
-  .footer__content li .fa-handshake-angle {
-    font-size: 14px;
-  }
-  /**** PAGE RESTAURANTS ****/
-  .contenu {
-    z-index: 50;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .image-hero {
-    width: 100%;
-    height: 237px;
-    position: relative;
-  }
-  .image-hero img {
-    height: 275px;
-    width: 100%;
-    box-sizing: border-box;
-    object-fit: cover;
-  }
-  .menu {
-    padding: 32px 13px 40px;
-    width: 100%;
-  }
-  .menu__head {
-    width: 100%;
-    justify-content: space-between;
-  }
+/**** PAGE RESTAURANTS ****/
+.contenu {
+  z-index: 50;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
+.image-hero {
+  width: 100%;
+  height: 237px;
+  position: relative;
+}
+.image-hero img {
+  height: 275px;
+  width: 100%;
+  box-sizing: border-box;
+  object-fit: cover;
+}
+
+.menu {
+  padding: 32px 13px 40px;
+  width: 100%;
+}
+.menu__head {
+  width: 100%;
+  justify-content: space-between;
+}
+
 /**** VERSION TABLETTE & DESKTOP ****/
 @media screen and (min-width: 768px) {
-  .main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: #000000;
-  }
-  .header__logo {
-    width: 225px;
-    height: 38px;
-  }
-  /**** PRESENTATION ****/
-  .presentation {
-    padding: 39px 50px 30px;
-  }
-  .presentation__heading {
-    padding: 39px 50px 30px;
-    margin: 0;
-    font-size: 40px;
-    font-weight: 700;
-    width: 100%;
-  }
-  /**** FONCTIONNEMENT ****/
-  .operation {
-    padding: 48px 121px;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  .operation__title {
-    margin: 0;
-    font-size: 24px;
-    font-weight: 700;
-    width: 100%;
-    width: 100%;
-  }
-  .step {
-    display: flex;
-    flex-direction: row;
-    width: 30%;
-    align-items: center;
-  }
-  .step__detail {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    background: #F6F6F6;
-    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
-    border-radius: 20px;
-    gap: 20px;
-    margin-left: 10px;
-    list-style: none;
-    padding: 10px 40px;
-    position: relative;
-    width: 100%;
-  }
-  .step__detail .fa-store {
-    color: #9356DC;
-  }
-  .step__order {
-    background: #9356DC;
-    padding: 5px 10px;
-    border-radius: 15px;
-    color: #fff;
-    position: absolute;
-  }
   /**** RESTAURANTS ****/
-  .restaurants {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    padding: 54px 121px 66px;
-  }
-  .restaurants__title {
-    padding-left: 3px;
-    padding-bottom: 3px;
-    margin: 0;
-    font-size: 24px;
-    font-weight: 700;
-    width: 100%;
-  }
-  .restaurants__card {
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 55px;
-    width: 100%;
-  }
-  .card {
-    width: 45%;
-  }
   /**** FOOTER ****/
   .footer {
     padding: 22px 34px;
