--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -537,7 +537,7 @@ button:hover {
   padding-right: 25px;
 }
 
-/**FAVORI**/
+/***** FAVORI*****/
 label {
   cursor: pointer;
 }
@@ -694,7 +694,6 @@ input[type=checkbox]#like4:checked ~ .like-checked4 {
   padding: 15px 12px;
   background: #fff;
   border-radius: 15px;
-  transform-origin: 0% 50%;
   overflow: hidden;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
   display: flex;
@@ -704,16 +703,16 @@ input[type=checkbox]#like4:checked ~ .like-checked4 {
   animation: show 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
 }
 .menu-section__card--1 {
-  animation-delay: 0.25s;
-}
-.menu-section__card--2 {
-  animation-delay: 0.5s;
-}
-.menu-section__card--3 {
   animation-delay: 0.75s;
 }
+.menu-section__card--2 {
+  animation-delay: 1.5s;
+}
+.menu-section__card--3 {
+  animation-delay: 2.25s;
+}
 .menu-section__card--4 {
-  animation-delay: 1s;
+  animation-delay: 3s;
 }
 .menu-section__card .choice {
   display: flex;
@@ -773,10 +772,15 @@ input[type=checkbox]#like4:checked ~ .like-checked4 {
 
 @keyframes show {
   0% {
-    transform: scaleX(0);
+    transform: translateY(80px);
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.1;
   }
   100% {
-    transform: scaleX(1);
+    transform: translateY(0px);
+    opacity: 1;
     visibility: visible;
   }
 }
