--- a/sass/main.scss
+++ b/sass/main.scss
@@ -49,7 +49,7 @@ $breakpoints: (mobile: 767px, tab: 1024px, desktop: 1440px);
     border: 0;
     background: $color-gradient;
     &:hover {
-        background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
+        opacity: 0.9;
         box-shadow: map-get($box-shadow, hover);
     }
 
@@ -102,9 +102,9 @@ $breakpoints: (mobile: 767px, tab: 1024px, desktop: 1440px);
     align-items: center;
     justify-content: center;
     background: hsla(300, 14%, 95%, 0.83);
-    animation: 1500ms 800ms normal 1 forwards infinite;
+    animation: 1.5ms 800ms normal 1 forwards run;
 }
-@keyframes infinite {
+@keyframes run {
     0% {
         opacity: 1;
         visibility: visible;
@@ -131,19 +131,19 @@ $breakpoints: (mobile: 767px, tab: 1024px, desktop: 1440px);
 }
 .loader div:nth-child(1) {
     left: 8px;
-    animation: loader1 800ms infinite;
+    animation: loader1 800ms 6;
 }
 .loader div:nth-child(2) {
     left: 8px;
-    animation: loader2 800ms infinite;
+    animation: loader2 800ms 6;
 }
 .loader div:nth-child(3) {
     left: 32px;
-    animation: loader2 800ms infinite;
+    animation: loader2 800ms 6;
 }
 .loader div:nth-child(4) {
     left: 56px;
-    animation: loader3 800ms infinite;
+    animation: loader3 800ms 6;
 }
 @keyframes loader1 {
     0% {
