--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,306 +1,35 @@
 /** VARIABLES **/
-$color-bg: #F6F6F6;
-$color-bg-location: #EAEAEA;
-$color-bg-resto:#D2D2D2;
-$color-primary: #9356DC;
-$color-white: #fff;
-$color-badge: #99E2D0;
-$color-font-badge: #008766;
-$color-font-location: #353535;
-$color-font-primary: #000000;
-$color-gradient: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
-$color-bg-heart: transparent ;
-$anim-dur: 1.5s;
-$anim-delay: calc($anim-dur / 2);
+@import "./Utils/variables";
 
 /** MAPS & LISTS **/
 $font-size :(Title: 24px, Subtitle: 18px, Summary: 17px, Link: 16px, Detail: 15px, Badge: 14px);
 $font-weight :(Bold: 700, Medium: 500, Light: 300);
 $box-shadow: (head: 0 2px 4px 0 rgba(0, 0, 0, 0.15), button: 0 4px 10px 0 rgba(0, 0, 0, 0.25),hover: 0 4px 15px 0 rgba(0, 0, 0, 0.35), card: 0 4px 15px 0 rgba(0, 0, 0, 0.1), location: 0 4px 15px 0 rgba(0, 0, 0, 0.15), card-rest: 0 5px 15px rgba(0, 0, 0, 0.15));
-$breakpoints: (mobile: 767px, tab: 1024px, desktop: 1440px);
+$breakpoints: ('mobile' : 767px, 'tab' : 1024px);
+
 
 /** MIXIN **/
-@mixin mobile-only {
-    @media screen and (max-width: map-get($breakpoints, mobile)){
-        padding: 0px;
-    } 
-}
+@import "./Utils/mixins";
 
-@mixin tablet {
-    @media screen and (max-width: map-get($breakpoints, tab)) and (min-width: map-get($breakpoints, mobile)){
-        padding: 30px 100px;
-    } 
-}
-
-@mixin desktop {
-    @media screen and (min-width: map-get($breakpoints, tab)){
-        padding: 30px 180px;
-    } 
-}
-
-
-@mixin btn-home {
-    padding: 13px 0;
-    margin: 20px 0;
-    color: $color-white;
-    width: 218px;
-    box-shadow: map-get($box-shadow, button);
-    border-radius: 25px;
-    border: 0;
-    background: $color-gradient;
-    &:hover {
-        opacity: 0.9;
-        box-shadow: map-get($box-shadow, hover);
-    }
-
-}
-
-@mixin main-title {
-    margin: 0;
-    font-size: map-get($font-size, Title);
-    font-weight: map-get($font-weight, Bold);
-    width: 100%;
-}
-
-@mixin heading-title {
-    margin: 0;
-    font-size: 40px;
-    font-weight: map-get($font-weight, Bold);;
-    width: 100%;
-}
-
-@mixin typo-btn {
-    margin:0 ;
-    font-size: map-get($font-size, Link);
-    font-weight: map-get($font-weight, Medium);
-}
-
-@mixin footer {
-        background-color: $color-font-location;
-        font-size: map-get($font-size, Link);
-        font-weight: 400;
-        color: #fff;
-}
-
-@mixin card{
-    background-color: $color-white;
-    border-radius: 15px;
-    box-shadow: map-get($box-shadow, card);
-}
 
 
 
 /*** LOADER **/
-.loader-space {
-    position: fixed;
-    height: 100%;
-    width: 100%;
-    left: 0;
-    top: 0;
-    z-index: 500;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: hsla(300, 14%, 95%, 0.83);
-    animation: 1.5ms 800ms normal 1 forwards run;
-}
-@keyframes run {
-    0% {
-        opacity: 1;
-        visibility: visible;
-    }
-    100% {
-        opacity: 0;
-        visibility: hidden;
-    }
-}
-.loader {
-    display: inline-block;
-    position: relative;
-    width: 80px;
-    height: 80px;
-}
-.loader div {
-    position: absolute;
-    top: 33px;
-    width: 13px;
-    height: 13px;
-    border-radius: 50%;
-    background: $color-primary;
-    animation-timing-function: cubic-bezier(0, 1, 1, 0);
-}
-.loader div:nth-child(1) {
-    left: 8px;
-    animation: loader1 800ms 6;
-}
-.loader div:nth-child(2) {
-    left: 8px;
-    animation: loader2 800ms 6;
-}
-.loader div:nth-child(3) {
-    left: 32px;
-    animation: loader2 800ms 6;
-}
-.loader div:nth-child(4) {
-    left: 56px;
-    animation: loader3 800ms 6;
-}
-@keyframes loader1 {
-    0% {
-        transform: scale(0);
-    }
-    100% {
-        transform: scale(1);
-}
-}
-@keyframes loader3 {
-    0% {
-        transform: scale(1);
-    }
-    100% {
-        transform: scale(0);
-    }
-}
-@keyframes loader2 {
-    0% {
-        transform: translate(0, 0);
-    }
-    100% {
-        transform: translate(24px, 0);
-    }
-}
+@import "./Components/loader";
 
 
 /****** CONTENU PAGE ****/
-body {
-    background: $color-bg;
-    font-family: 'Roboto', sans-serif;
-    color: $color-font-primary;
-    margin: 0;
-}
-.main-container {
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-}
+@import "./Base/base";
 
-.header {
-    background: $color-white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1;
-    box-shadow: map-get($box-shadow, head);
-    @include desktop;
-    @include tablet;
+@import "./Layout/header";
 
-    &__logo {
-        padding: 10px 0;
-        width: 162px;
-        height: 44px;
-        @media screen and (min-width: map-get($breakpoints, mobile)) {
-            width: 200px;
-            height: 34px;
-        }
-        @media screen and (min-width: map-get($breakpoints, tablet)) {
-            padding: 30px ;
-        }
-    }
-    &__back {
-        color: $color-font-primary;
-        position: absolute;
-        font-size: 20px;
-        left: 23px;
-    }
-}
 /**** BOUTONS ****/
-button {
-    @include btn-home;
-    @include typo-btn;
-    margin: 27px 0;
-    }
+@import "./Components/boutons";
 
 /**** FOOTER ****/
+@import "./Layout/footer";
 
-.footer {
-    @include footer;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    padding: 22px 25px;
-    @media screen and (min-width: map-get($breakpoints, mobile)) {
-        flex-direction: row;
-        justify-content: flex-end;
-        padding: 64px 66px 30px 0;
-        align-items: center;
-        gap: 20px;
-    }
-    &__order1 {
-            @media screen and (min-width: map-get($breakpoints, mobile)) {
-            order: 3;
-            }
-        }
-    &__order2 {
-            @media screen and (min-width: map-get($breakpoints, mobile)) {
-                order: 1;
-            }
-        }
-    &__order3 {
-        @media screen and (min-width: map-get($breakpoints, mobile)) {
-            order: 2;
-        }
-    }
-    &__title {
-        font-family: Shrikhand, 'sans-serif';
-        margin: 0;
-        font-size: map-get($font-size, Subtitle);
-        font-weight: 400;
-        padding-bottom: 1em;
-        @media screen and (min-width: map-get($breakpoints, mobile)) {
-            padding: 0 0 0 9px;
-        }
-    }
-    &__content{
-        list-style: none;
-        display: flex;
-        flex-direction: column;
-        padding: 0;
-        margin: 0;
-        @media screen and (min-width: map-get($breakpoints, mobile)) {
-            flex-direction: row;
-            column-gap: 7px;
-            justify-content: space-between;
-            margin: 0;
-        }
-        & a{
-            text-decoration: none;
-            color: #fff;
-        }
-        & li{
-            display: grid;
-            grid-template-columns: auto auto ;
-            grid-template-rows: auto ;
-            gap: 11px;
-            align-items: center;
-            justify-items: start;
-            justify-content: start;
-            padding-top: 7px;
-            
-            & .fa-utensils {
-                padding-right: 5px;
-                font-size: map-get($font-size, Badge);
-            }
 
-            & .fa-handshake-angle {
-                font-size: map-get($font-size, Badge);
-            }
-        }
-    
-    }
-}
 
 
 /********* CONTENU INDEX ********/
@@ -334,7 +63,7 @@ button {
         color: $color-font-primary;
         font-size: map-get($font-size, Title);
         font-weight: map-get($font-weight, Bold);
-        @media screen and (min-width: map-get($breakpoints, mobile)){
+        @include bp (mobile) {
             padding: 30px 0;
             @include heading-title;
         }
@@ -346,7 +75,7 @@ button {
         font-size: map-get($font-size, Subtitle);
         color: $color-font-location;
         margin: 0;
-        @media screen and (min-width: map-get($breakpoints, mobile)){
+        @include bp (mobile) {
             padding-bottom: 30px;
         }
     }
@@ -363,23 +92,22 @@ button {
     align-items: stretch;
     box-sizing: border-box;
     padding: 48px 20px 68px;
-    @include tablet;
-    @include desktop;
 
-    @media screen and (min-width: map-get($breakpoints, mobile)){
+    @include bp (mobile) {
         flex-direction: row;
         flex-wrap: wrap;
         padding:30px 100px 50px;
-    @media screen and (min-width: map-get($breakpoints,tab)){
-        padding: 30px 180px 50px;
     }
+    @include bp (tab) {
+            padding: 30px 180px 50px;
     }
+
     &__title {
         @include main-title;
         width: 100%;
         margin: 0 0 2px;
-        @media screen and (min-width: map-get($breakpoints, mobile)){
-        padding-top: 20px;
+        @include bp (mobile) {
+            padding-top: 20px;
         }
     }
     &__step {
@@ -390,7 +118,7 @@ button {
     height: 100%;
     flex-wrap: nowrap;
     justify-content: space-between;
-    @media screen and (min-width: map-get($breakpoints, mobile)) {
+    @include bp (mobile) {
         width: 30%;
         flex: 1 1 20%;
 
@@ -439,16 +167,14 @@ button {
     box-sizing: border-box;
     width: 100%;
     justify-content: space-between;
-    @include tablet;
-    @include desktop;
 
 
-    @media screen and (min-width: map-get($breakpoints, mobile)) {
+    @include bp (mobile) {
         flex-direction: row;
         flex-wrap: wrap;
         padding: 30px 100px;
     }
-    @media screen and (min-width: map-get($breakpoints, tab)) {
+    @include bp (tab) {
         flex-direction: row;
         flex-wrap: wrap;
         padding: 30px 180px;
@@ -467,7 +193,7 @@ button {
         box-sizing: border-box;
         gap: 18px;
         width: 100%;
-        @media screen and (min-width: map-get($breakpoints, mobile)) {
+        @include bp (mobile) {
             flex-direction: row;
             flex-wrap: wrap;
             row-gap: 50px;
@@ -523,7 +249,7 @@ button {
             font-size: map-get($font-size, Badge);
             font-weight: map-get($font-weight, Medium);
             box-shadow: map-get($box-shadow, head);
-            @media screen and (min-width: map-get($breakpoints, desktop)) {
+            @include bp (mobile) {
                 right: 17px;
             }
         }
@@ -534,7 +260,7 @@ button {
         height: 100%;
         padding: 16px 0 12px 13px;
         box-sizing: border-box;
-        @media screen and (min-width: map-get($breakpoints, desktop)) {
+        @include bp (mobile) {
             padding-left: 18px;
         }
         & h3 {
@@ -560,10 +286,10 @@ button {
 label {
     cursor: pointer;
 }
-
-.like-checked1, .like-checked2, .like-checked3, .like-checked4 {
-    font-size: 24px;} 
-.like-unchecked1, .like-unchecked2, .like-unchecked3, .like-unchecked4 {
+%property-font-like{
+    font-size: 24px;
+}
+%property-like {
     font-size: 24px; 
     background: $color-gradient;
     background-clip: text;
@@ -572,217 +298,111 @@ label {
     -webkit-text-fill-color: $color-bg-heart;
     -moz-text-fill-color: $color-bg-heart;
 }
+.like-checked1 {
+    @extend %property-font-like;
+} 
+.like-checked2 {
+    @extend %property-font-like;
+} 
+.like-checked3 {
+    @extend %property-font-like;
+} 
+.like-checked4 {
+    @extend %property-font-like;
+} 
 
-/**like1**/
-input[type="checkbox"]#like1, .like-unchecked1 {
+.like-unchecked1{
+    @extend %property-like;
+}
+.like-unchecked2{
+    @extend %property-like;
+}
+.like-unchecked3{
+    @extend %property-like;
+}
+.like-unchecked4{
+    @extend %property-like;
+}
+
+
+
+/** heart **/
+%check {
     display: none;
 }
-input[type="checkbox"]#like1:checked ~ .like-unchecked1{
+%check-displayN {
     display: inline-block;
 }
-input[type="checkbox"]#like1:checked ~ .like-checked1 {
-    display: none;
+input[type="checkbox"]#like1{
+    @extend %check;
+}
+.like-unchecked1 {
+    @extend %check;
 }
 
-/**like2**/
-input[type="checkbox"]#like2, .like-unchecked2 {
-    display: none;
-}
-input[type="checkbox"]#like2:checked ~ .like-unchecked2 {
-    display: inline-block;
-}
-input[type="checkbox"]#like2:checked ~ .like-checked2 {
-    display: none;
+input[type="checkbox"]#like1:checked {
+    ~ .like-unchecked1{
+    @extend %check-displayN;
+    }
+} 
+
+input[type="checkbox"]#like1:checked {
+    ~.like-checked1{
+    @extend %check;
+    }
 }
 
-/**like3**/
-input[type="checkbox"]#like3, .like-unchecked3 {
-    display: none;
+input[type="checkbox"]#like2{
+    @extend %check;
 }
-input[type="checkbox"]#like3:checked ~ .like-unchecked3 {
-    display: inline-block;
+.like-unchecked2 {
+    @extend %check;
 }
-input[type="checkbox"]#like3:checked ~ .like-checked3 {
-    display: none;
+input[type="checkbox"]#like2:checked {
+    ~ .like-unchecked2 {
+        @extend %check-displayN;
+    }
+}
+input[type="checkbox"]#like2:checked {
+    ~ .like-checked2 {
+    @extend %check;
+    }
 }
 
 
-/**like4**/
-input[type="checkbox"]#like4, .like-unchecked4 {
-    display: none;
+input[type="checkbox"]#like3{
+    @extend %check;
+} 
+.like-unchecked3 {
+    @extend %check;
 }
-input[type="checkbox"]#like4:checked ~ .like-unchecked4 {
-    display: inline-block;
+input[type="checkbox"]#like3:checked {
+    ~ .like-unchecked3 {
+        @extend %check-displayN;
+    }
 }
-input[type="checkbox"]#like4:checked ~ .like-checked4 {
-    display: none;
+input[type="checkbox"]#like3:checked{
+    ~ .like-checked3 {
+        @extend %check;
+    }
+}
+
+input[type="checkbox"]#like4{
+    @extend %check;
+} 
+.like-unchecked4 {
+    @extend %check;
+}
+input[type="checkbox"]#like4:checked {
+    ~ .like-unchecked4 {
+        @extend %check-displayN;
+    }
+}
+input[type="checkbox"]#like4:checked{
+    ~ .like-checked4 {
+        @extend %check;
+    }
 }
 
 /****** CONTENU PAGE RESTAURANT *******/
-.main-container{
-    &--color{
-        background: $color-white;
-    }
-}
-
-.image-hero {
-    width: 100%;
-    height: 237px;
-    position: relative;
-    & img {
-        height: 275px;
-        width: 100%;
-        box-sizing: border-box;
-        object-fit: cover;
-    }
-}
-/** CONTENU **/
-.contenu {
-    z-index: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.menu {
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    border-top-left-radius: 40px ;
-    border-top-right-radius: 40px;
-    background-color: $color-bg;
-    box-sizing: border-box;
-    align-items: center;
-    padding: 32px 13px 40px;
-    width: 100%;
-        @media screen and (min-width: map-get($breakpoints, mobile)) {
-            padding: 32px 160px 40px;
-            width: 75%;
-        }
-        @media screen and (min-width: map-get($breakpoints, tab)) {
-            padding: 32px 210px 40px;
-        }
-
-
-    &__head {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        gap: 40px;
-        padding-right: 25px;
-        box-sizing: border-box;
-        @media screen and (min-width: map-get($breakpoints, tab)) {
-            justify-content: space-between;
-            width: 75%;
-            gap: 24px;
-        }
-
-        & .title {
-            font-family: Shrikhand, sans-serif;
-            font-size: 28px;
-        }
-    }  
-}
-
-.menu-section {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-    &__title {
-        font-size: map-get($font-size, Link);
-        font-weight: map-get($font-weight, Light);
-        border-bottom: 3px solid $color-badge;
-        width: 40px;
-        padding-bottom: 8px;
-        margin-bottom: 12px;
-    }
-    &__card {
-        padding: 15px 12px;
-        background: $color-white;
-        border-radius: 15px;
-        overflow: hidden;
-        box-shadow: map-get($box-shadow, card-rest);
-        display: flex;
-        flex-direction: row;
-        align-items: inherit;
-        visibility:hidden;
-        animation: show 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
-        @for $i from 1 through 4 {
-            &--#{$i} {
-                animation-delay: $anim-delay * $i;
-            }
-        }
-        & .choice {
-            display: flex;
-            flex-direction: column;
-            gap: 5px;
-            white-space: nowrap;
-            overflow: hidden;
-            flex: 1;
-            
-            &__title {
-                font-size: map-get($font-size, Subtitle);
-                font-weight: map-get($font-weight, Medium);
-                margin: 0;
-                overflow: hidden;
-                text-overflow: ellipsis;
-            }
-            &__detail {
-                font-size: map-get($font-size, Detail);
-                font-weight: map-get($font-weight, Light);
-                margin: 0;
-                overflow: hidden;
-                text-overflow: ellipsis;
-            }
-        }
-        & .price {
-            font-size: map-get($font-size, Detail);
-            font-weight: map-get($font-weight, Bold);
-            align-self: flex-end;
-            padding: 0px 26px;
-            & p{
-                margin: 0;
-            }
-        }
-        & .check {
-            background-color: #99E2D0;
-            color: $color-white;
-            font-size: map-get($font-size, Title);
-            border-top-right-radius: 15px;
-            border-bottom-right-radius: 15px;
-            width: 59px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin: -20px -71px -20px -16px;
-            transition: margin-right 300ms linear;
-            & i{
-                font-size: 20px;
-                transform: rotate(-360deg);
-                transition: transform 300ms linear;
-            }
-        }
-        &:hover > .check {
-            margin-right: -15px;
-            & > i{
-                transform: rotate(0);
-            }
-        }
-    }
-}
-@keyframes show {
-    0% {
-        transform: translateY(80px);
-        opacity: 0;
-    }
-    40% {
-        opacity: 0.1;
-    }
-
-    100%{
-        transform: translateY(0px);
-        opacity:1;
-        visibility: visible;
-    }
-}
+@import "./Pages/page-restaurant";
