--- a/sass/Components/_boutons.scss
+++ b/sass/Components/_boutons.scss
@@ -1,5 +1,11 @@
-button {
+.presentation__btn {
     @include btn-home;
     @include typo-btn;
     margin: 27px 0;
+    text-decoration: none;
+    &--width{
+        width: 186px;
     }
+}
+
+
