--- a/sass/Pages/_page-restaurant.scss
+++ b/sass/Pages/_page-restaurant.scss
@@ -35,24 +35,25 @@
     padding: 32px 13px 40px;
     width: 100%;
     @include bp (mobile) {
-        padding: 32px 160px 40px;
+        padding: 51px 160px 40px;
         width: 75%;
     }
-    @media screen and (min-width: map-get($breakpoints, tab)) {
-        padding: 32px 210px 40px;
+    @include bp (tab) {
+        padding: 51px 210px 40px;
     }
 
 
     &__head {
         display: flex;
         flex-direction: row;
+        justify-content: space-between;
         align-items: center;
-        gap: 40px;
-        padding-right: 25px;
+        padding-right: 28px;
         box-sizing: border-box;
+        width: 100%;
         @include bp (mobile) {
-            justify-content: space-between;
-            width: 75%;
+            justify-content: center;
+            padding: 0;
             gap: 24px;
         }
 
@@ -141,14 +142,8 @@
                 transform: rotate(-360deg);
                 transition: transform 300ms linear;
             }
-        }
+        }        
         &:hover > .check {
-            margin-right: -15px;
-            & > i{
-                transform: rotate(0);
-            }
-        }
-        &:active > .check {
             margin-right: -15px;
             & > i{
                 transform: rotate(0);
