--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -605,6 +605,7 @@ input[type=checkbox]#like4:checked ~ .like-unchecked4, input[type=checkbox]#like
 }
 .presentation__btn--width {
   width: 186px;
+  margin: 0;
 }
 
 .header {
